Fixed alignment in safari

--- a/docs/scss/styles.scss
+++ b/docs/scss/styles.scss
@@ -21,14 +21,15 @@ html, body {
 		    background-position: center;
 		    height: 100px;
 		    width: 100px;
-		    margin-right: 15px;
+		    margin-right: 18px;
 
 		    @media (min-width: 768px) {
-	    		background-position: center 6px;
+	    		background-position: center 0;
 		    }
 		}
 
 		&-head {
+			line-height: 32px;
 
 			h1 {
 				margin-top: 0;
@@ -47,6 +48,7 @@ html, body {
 		        font-size: 18px;
     			font-weight: 300;
     			opacity: 0.6;
+    			line-height: 25px;
 			}
 		}
 
